# coco_simulations

./: README.md
coco_description/: CMakeLists.txt  package.xml
coco_description/urdf/: coco_description_sim.xacro.urdf
coco_gazebo_sim/: CMakeLists.txt  package.xml
coco_gazebo_sim/config/: coco.rviz  coco_controllers.yaml
coco_gazebo_sim/launch/: coco_robot.launch.py
coco_simulations/: CMakeLists.txt  package.xml
