<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coco_gazebo_sim</name>
  <version>0.1.0</version>
  <description>Interfaz de hardware para controlar motores Dynamixel en el robot YAREN usando ROS2 Control.</description>
  <maintainer email="iesusdavila@gmail.com">iesus_robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

